--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,690 @@
-.App {
+/* Global Styles */
+:root {
+  --primary-color: #4154ff;
+  --dark-color: #333333;
+  --light-color: #f4f4f4;
+  --danger-color: #dc3545;
+  --success-color: #28a745;
+  --github-navcolor:#181c1f;
+  --github-bgcolor:#eff2f5;;
+  --github-bluecolor:#0366D6;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1rem;
+  line-height: 1.6; 
+  background-color: #fff;
+  font-family:Roboto Mono;
+}
+
+/* Github colors */
+.github-navcolor{
+  background:var(--github-navcolor);
+  color:white;
+}
+
+.github-bgcolor{
+  background:var(--github-bgcolor);
+}
+
+.github-bluecolor{
+  background:var(--github-bluecolor);
+}
+.bg-twitch{
+  background:#772CE8 !important;
+  color:white !important;
+}
+
+.gitbtn{
+  border : 2px solid #772CE8;
+  color:#772CE8 !important ;
+  border-radius :10px;
+  font-size : 16px;
+  padding:0 13px;
+  margin:0 20px !important;
+  margin-top:10px !important;
+  background: #eff2f5;
+  height:30px;
+  display:flex;
+  align-self: center;
+  justify-self: center;
+  justify-content: center;
+}
+
+.users{
+  /* border:0.1px solid #E1E4E8;
+  border-radius:10px;
+  display:flex;
+  flex-direction:column;
+  /* font-family:Segoe UI; */
+  /* font-family:Roboto Mono;
+  margin-bottom:200px;  */
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  grid-gap:1rem;
+  margin-bottom:300px;
+}
+
+.user{
+  font-size:16px;
+  border-top:0.1px solid #E1E4E8;
+}
+@media(max-width:700px){
+  .user{
+    display:flex;
+    flex-direction: column;
+  }
+  .users .user-description{
+    padding-top:0px;
+    margin-top:-10px;
+  }
+  .gitbtn{
+    margin:10px 0;
+    margin-bottom:20px;
+
+  }
+}
+.users-header{
+  padding:10px;
+  padding-left:30px;
+  background:var(--github-bgcolor);
+  width:100%;
+  font-family:Segoe UI;
+  font-family:Roboto Mono;
+  
+}
+.user-profile{
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+  padding:20px;
+  font-weight:700;
+  font-size:22px;
+  color:var(--github-bluecolor) !important;
+
+}
+.imgStyle{
+  overflow: hidden;
+  border-radius:10px;
+  width:220px;
+  height:220px;
+}
+
+.imgStyle:hover img{
+  transform:scale(1.1) !important;
+  transition:transform 1s; 
+}
+
+.user-profile a{
+  margin-top:10px;
+  color:#772CE8 !important;
+  
+}
+.user-profile a:hover{
+  text-decoration:underline;
+}
+
+.login{
+  color:#772CE8 !important;
+}
+
+.user-description{
+  padding:0 10px;
+  padding-top:30px;
+  margin-bottom:10px;
+  display:flex;
+}
+/* User Page Styles */
+.user-header{
+  display:flex;
+  height:auto;
+  background:var(--github-bgcolor);
+  border-radius:10px;
+  padding-bottom:15px !important;
+  padding-top:10px !important;
+  margin-top:10px !important;
+  
+}
+@media(max-width:720px){
+  .user-header{
+    display:grid;
+  }
+  .user-info{
+    margin-left:-20px !important;
+    margin-top:0px !important;
+
+  }
+  .profile-photo{
+    margin-left:-37px !important;
+  }
+  .repos{
+    margin-left:0px !important;
+  }
+}
+@media(max-width:818px){
+  .users{
+    grid-template-columns: repeat(2,1fr) !important;
+  }
+}
+@media(max-width:570px){
+  .users{
+    grid-template-columns:100% !important;
+  }
+}
+
+.profile-photo{
+  display:grid;
+  justify-content: start;
+  margin-left:-35px;
+  padding-left:10px;
+  padding-top:5px;
+  
+}
+.profile-photo img{
+  width:220px;
+  height:220px;
+  border-radius:10px;
+}
+
+.user-info{
+  display:flex;
+  flex-direction:column;
+  justify-items:center;
+  margin-left:30px;
+  margin-top:-15px;
+  font-size:15px;
+  padding:5px 0;
+}
+.user-info span{
+  margin-right:30px;
+}
+
+.user-info *{
+  margin-top:10px;
+}
+.bio{
+  margin-top:-5px;
+}
+.other-info{
+  display:flex;
+  flex-direction: column;
+  margin-top:0px;
+}
+.other-info span{
+  margin-top:0px;
+
+}
+.badge2{
+  background:lightgray;
+  padding:0 5px;
+  border-radius: 100px;
+  margin-left:10px;
+  font-size:14px;
+}
+.repos-line{
+  color:silver;
+  margin-top:10px;
+  margin-bottom:5px;
+  width:280px;
+  height:3px;
+  background:black;
+}
+.repos{
+  margin-top:35px;
+  margin-bottom:50px;
+}
+.repo{
+  width:100%;
+  height:auto;
+  border-bottom:0.5px solid black;
+  margin:10px 0;
+  padding:10px 0;
+}
+.repo-name{
+    font-size:18px;
+    color:#772CE8;
+    text-decoration:none;
+    padding-bottom:10px !important;
+}
+.repo-description{
+  font-size:14px;
+}
+.repo-name:hover{
+  text-decoration: underline;
+}
+.repo-other-info{
+  display: flex;
+  justify-content:flex-start;
+  flex-wrap: wrap;
+  margin-top:5px;
+}
+.repo-other-info span{
+  margin-top:5px;
+}
+.reposbtn{
+  margin-bottom:200px;
+  font-size:16px;
+  color:#772CE8;
+}
+.backbtn{
+    font-size:16px !important;
+}
+.searchbtn{
+  border-radius:7px;
+  font-size:18px !important;
+}
+.form input[type="text"]:focus{
+  border:0.5px solid white !important;
+  
+}
+
+
+.bold{
+  font-weight:700;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+ul {
+  list-style: none;
+}
+
+img {
+  width: 100%;
+}
+
+/* Utilities */
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
+
+/* Text Styles*/
+.x-large {
+  font-size: 4rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+.large {
+  font-size: 3rem;
+  line-height: 1.2;
+  margin-bottom: 1rem;
+}
+
+.lead {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.text-center {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text-primary {
+  color: var(--primary-color);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.text-dark {
+  color: var(--dark-color);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.text-success {
+  color: var(--success-color);
+}
+
+.text-danger {
+  color: var(--danger-color);
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-left {
+  text-align: left;
+}
+
+/* Center All */
+.all-center {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  width: 100%;
+  margin: auto;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+/* Cards */
+.card {
+  padding: 1rem;
+  border: #ccc 1px dotted;
+  margin: 0.7rem 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* List */
+.list {
+  margin: 0.5rem 0;
+}
+
+.list li {
+  padding-bottom: 0.3rem;
+}
+
+/* Padding */
+.p {
+  padding: 0.5rem;
+}
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
+.p-3 {
+  padding: 3rem;
+}
+.py {
+  padding: 0.5rem 0;
+}
+.py-1 {
+  padding: 1rem 0;
+}
+.py-2 {
+  padding: 2rem 0;
+}
+.py-3 {
+  padding: 3rem 0;
+}
+
+/* Margin */
+.m {
+  margin: 0.5rem;
+}
+.m-1 {
+  margin: 1rem;
+}
+.m-2 {
+  margin: 2rem;
+}
+.m-3 {
+  margin: 3rem;
+}
+.my {
+  margin: 0.5rem 0;
+}
+.my-1 {
+  margin: 1rem 0;
+}
+.my-2 {
+  margin: 2rem 0;
+}
+.my-3 {
+  margin: 3rem 0;
+}
+
+/* Grid */
+.grid-2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 1rem;
+}
+
+.grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+}
+
+.grid-4 {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+}
+
+.btn {
+  display: inline-block;
+  background: var(--light-color);
+  color: #333;
+  padding: 0.4rem 1.3rem;
+  font-size: 1rem;
+  border: none;
+  cursor: pointer;
+  margin-right: 0.5rem;
+  transition: opacity 0.2s ease-in;
+  outline: none;
+}
+
+.btn-link {
+  background: none;
+  padding: 0;
+  margin: 0;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+.btn-sm {
+  font-size: 0.8rem;
+  padding: 0.3rem 1rem;
+  margin-right: 0.2rem;
+}
+
+.badge {
+  display: inline-block;
+  font-size: 0.8rem;
+  padding: 0.2rem 0.7rem;
+  text-align: center;
+  margin: 0.3rem;
+  background: var(--light-color);
+  color: #333;
+  border-radius: 5px;
+}
+
+.alert {
+  padding: 0.7rem;
+  margin: 1rem 0;
+  opacity: 0.9;
+  background: var(--light-color);
+  color: #333;
+}
+
+.btn-primary,
+.bg-primary,
+.badge-primary,
+.alert-primary {
+  background: var(--primary-color);
+  color: #fff;
+}
+
+.btn-light,
+.bg-light,
+.badge-light,
+.alert-light {
+  background: var(--light-color);
+  color: #333;
+}
+
+.btn-dark,
+.bg-dark,
+.badge-dark,
+.alert-dark {
+  background: var(--dark-color);
+  color: #fff;
+}
+
+.btn-danger,
+.bg-danger,
+.badge-danger,
+.alert-danger {
+  background: var(--danger-color);
+  color: #fff;
+}
+
+.btn-success,
+.bg-success,
+.badge-success,
+.alert-success {
+  background: var(--success-color);
+  color: #fff;
+}
+
+.btn-white,
+.bg-white,
+.badge-white,
+.alert-white {
+  background: #fff;
+  color: #333;
+  border: #ccc solid 1px;
+}
+
+.btn:hover {
+  opacity: 0.8;
+}
+
+.bg-light,
+.badge-light {
+  border: #ccc solid 1px;
+}
+
+.round-img {
+  border-radius: 50%;
+}
+
+/* Forms */
+input {
+  margin: 1.2rem 0;
+}
+
+.form-text {
+  display: block;
+  margin-top: 0.3rem;
+  color: #888;
+}
+
+input[type='text'],
+input[type='email'],
+input[type='password'],
+input[type='date'],
+select,
+textarea {
+  display: block;
+  width: 100%;
+  padding: 0.4rem;
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+}
+
+input[type='submit'],
+button {
+  font: inherit;
+}
+
+table th,
+table td {
+  padding: 1rem;
+  text-align: left;
+}
+
+table th {
+  background: var(--light-color);
+}
+
+/* Navbar */
+.navbarr {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.7rem 2rem;
+  z-index: 1;
+  width: 100%;
+  opacity: 0.9;
+  margin-bottom: 1rem;
+}
+@media(max-width:450px){
+  .navbarr{
+    font-size:16px;
   }
-  to {
-    transform: rotate(360deg);
+  .alert2{
+    font-size:13px;
+  }
+  .searchbtn{
+    font-size:12px;
+  }
+}
+.navbarr ul {
+  display: flex;
+}
+
+.navbarr a {
+  color: #fff;
+  padding: 0.45rem;
+  margin: 0 0.25rem;
+}
+
+.navbarr a:hover {
+  color: var(--light-color);
+}
+
+.navbarr .welcome span {
+  margin-right: 0.6rem;
+}
+
+/* Mobile Styles */
+@media (max-width: 700px) {
+  .hide-sm {
+    display: none;
+  }
+
+  .grid-2,
+  .grid-3,
+  .grid-4 {
+    grid-template-columns: 1fr;
+  }
+
+  /* Text Styles */
+  .x-large {
+    font-size: 3rem;
+  }
+
+  .large {
+    font-size: 2rem;
+  }
+
+  .lead {
+    font-size: 1rem;
+  }
+
+  /* Navbar */
+  .navbar {
+    display: block;
+    text-align: center;
+  }
+
+  .navbar ul {
+    text-align: center;
+    justify-content: center;
   }
 }
